# nekops

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  changelog-dev.md  index.html  package.json  pnpm-lock.yaml  rescue.html  shell.html  tsconfig.json  vite.config.ts
.github/: dependabot.yml
.github/workflows/: build-artifacts.yml
src/: App.tsx  Layout.tsx  main.tsx  rescue.tsx  routes.ts  shell.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: base.json  main-window.json  rescue-window.json  shell-window.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/common/: WindowBackground.tsx  actionStyles.ts  useRefListState.ts  useRefState.ts
src/components/: AboutModal.tsx  CopyButton.tsx  DeleteItemButton.tsx  EditSnippetModal.tsx  Header.tsx  SearchBar.tsx  ServerCard.tsx  ServerCardModal.tsx  TabStateIcon.tsx  TerminateAndExitModal.tsx  UnlockModal.tsx  UpdateModal.tsx
src/components/Nav/: NavDir.tsx  NavItem.tsx  iconStyle.ts  index.tsx
src/components/ServerCard/: Inner.tsx  index.tsx  inner.tsx  props.ts  styles.module.css
src/components/ServerCardsVirtualScroll/: VirtualItem.tsx  index.tsx
src/components/Twemoji/: index.module.css  index.tsx
src/components/analysis/: Billing.tsx  CornerIcon.tsx  GeneralStatics.tsx  Geolocation.tsx  PercentSection.tsx
src/components/multirun/: CommandCenter.tsx
src/components/rescue/: RescueModal.tsx  RescueTempLaunchModal.tsx  startVNCSession.tsx
src/components/settings/: types.ts  utils.tsx
src/components/shell/: SSHContextMenu.tsx  SSHTempLaunchModal.tsx  copySSHCommand.ts  startSSHSession.ts
src/components/ssh/: startSSHSession.ts
src/encrypt/: helper.ts  keyHandler.ts  methods.ts
src/events/: name.ts  payload.ts  storage.ts
src/i18n/: constants.ts  init.ts
src/i18n/loaders/: main.ts  rescue.ts  shell.ts
src/i18n/locales/: en-US.json  zh-CN.json
src/icons/: Ethernet.tsx
src/notifications/: rescue.tsx  shell.tsx  update.tsx
src/pages/: Analysis.tsx  Multirun.tsx  Rescue.tsx  SSH.tsx  Servers.tsx  Settings.tsx  Snippets.tsx
src/rescue/: RescueBackground.tsx  RescueTerminal.tsx  startProxy.tsx
src/rescue/RescueTabs/: ContextMenu.tsx  Panel.tsx  Tab.tsx  index.tsx  modalConfig.tsx
src/rescue/RescueTerminal/: VNCCredentialsForm.tsx  index.tsx
src/shell/: ShellBackground.tsx  ShellTabContextMenu.tsx  ShellTabs.tsx  ShellTerminal.tsx  TerminalContext.tsx  copyOrPaste.tsx  hostKeyEventHandler.tsx  layoutConfig.ts  startDummy.ts  startEmbeddedSSH.ts  startEmbeddedSSH.tsx  startSSH.ts  startSystemSSH.ts
src/shell/ShellTabs/: ContextMenu.tsx  Panel.tsx  ShellTab.module.css  Tab.tsx  dndConfig.ts  dndHandler.ts  gridModifyHandlers.ts  index.tsx  layoutConfig.ts  lifeCycleHandlers.ts  modalConfig.tsx  (+3 more)
src/slices/: encryptionSlice.ts  settingsSlice.ts
src/types/: server.ts  settings.ts  shell.ts  tabState.ts
utils/: sidecar-rename.js  sidecar-rename.mjs
(+73 files in other folders)
