[package]
name = "nekops"
version = "0.0.0"
description = "Nekops"
authors = ["Nya Candy"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "nekops_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
# tauri-plugin-window = "2.0.0-alpha.2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
# tauri-plugin-single-instance = "2.0.0-beta.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
enigo = "0.3"

#[target.'cfg(windows)'.dependencies]
#windows = { version = "0.61", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_System_Console", "Win32_System_Threading"] }
#
#[target.'cfg(unix)'.dependencies]
#nix = { version = "0.29", features = ["ioctl"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
